After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 563036 - Desensitize zoom items when non applicable
Desensitize zoom items when non applicable
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2008-12-02 21:38 UTC by Luca Ferretti
Modified: 2009-08-28 21:48 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Luca Ferretti 2008-12-02 21:38:36 UTC
Items related to zoom action (Larger Text, Smaller Text, Normal Size) are always active, even if you can't use them

# Steps to reproduce
 * Choose View->Normal Size
 * Open View menu

# Current result
Normal Size is active

#Expected result
Normal Size should be grayed, 'cause you are yet at normal size

Same behavior for Larger Text when at maximum zoom level, and Smaller Text when at minimum
Comment 1 Frederic Peters 2009-08-28 21:48:28 UTC
I just pushed this.

commit e7e18f52fdba2e2fdcc9663bb2a30e3f8d360b2e
Author: Frédéric Péters <fpeters@0d.be>
Date:   Fri Aug 28 23:44:45 2009 +0200

    Handle zoom level per web view, not per window
    
    The zoom level is now set directly on the web views, without a proxy
    variable attached to the window, that wouldn't reflect the currently
    displayed web view zoom level.
    
    This allows to (un)sensitize correctly menu and toolbar items.
    
    http://bugzilla.gnome.org/show_bug.cgi?id=563036