Handle zoom level per web view, not per window

The zoom level is now set directly on the web views, without a proxy
variable attached to the window, that wouldn't reflect the currently
displayed web view zoom level.

This allows to (un)sensitize correctly menu and toolbar items.

http://bugzilla.gnome.org/show_bug.cgi?id=563036